Font Awesome auf version 3.0 updated

--- a/Component/branches/SobiPro-1.1/Admin/about/en-GB/credits.html
+++ b/Component/branches/SobiPro-1.1/Admin/about/en-GB/credits.html
@@ -19,16 +19,20 @@
 		</li>
 	</ul>
 
-    <h4 style="margin-bottom: 2px;">Icons and graphics included in SobiPro</h4>
+    <h4 style="margin-bottom: 2px;">Icons and graphics used in SobiPro</h4>
 	<ul>
+        <li>
+            <a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">Font Awesome</a> by Dave Gandy
+        </li>
 		<li>
-			<a href="http://www.oxygen-icons.org/" target="_blank">Oxygen Icons set</a> used in the admin panel
+			<a href="http://www.oxygen-icons.org
+			/" target="_blank">Oxygen Icons</a>
 		</li>
 		<li>
-			<a href="http://mediadesign.deviantart.com/" target="_blank">HydroPro Icons</a> created by Benjamin Fleming / *MediaDesign
+			<a href="http://mediadesign.deviantart.com/" target="_blank">HydroPro Icons</a> by Benjamin Fleming / *MediaDesign
 		</li>
 		<li>
-			<a href="http://tiheum.deviantart.com/" target="_blank">Faenza Icons</a> created by Matthieu James
+			<a href="http://tiheum.deviantart.com/" target="_blank">Faenza Icons</a> by Matthieu James
 		</li>
 	</ul>
 	
