Extension Installer layout/2

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -220,7 +220,12 @@ div.spScreenTitle h4 {
 
 #SPAdmToolbar .btn {
   float: left;
-  padding: 4px 10px;
+  padding-left: 10px;
+}
+
+.SpCloudInstall .SpExtInstall {
+  float: left;
+  padding-left: 8px;
 }
 
 #SPAdmToolbar .divider {
@@ -476,6 +481,13 @@ div.spScreenTitle h4 {
 }
 .SobiPro .SpApps .icon-bell-alt {
   color: orange;
+}
+.SobiPro .SpApps .icon-cloud-download {
+  color: #0480BE;
+}
+
+.SobiPro .SpCloudInstall .progress {
+  margin: 5px 0px;
 }
 
 .SobiPro .SpCellCenter .sp-mini-bt {
