--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -180,7 +180,11 @@ div.spScreenTitle h4 {
 }
 #SPAdmToolbar .btn {
   float: left;
-  padding: 4px 10px;
+  padding-left: 10px;
+}
+.SpCloudInstall .SpExtInstall {
+  float: left;
+  padding-left: 8px;
 }
 #SPAdmToolbar .divider {
   padding: 0 5px;
@@ -396,6 +400,12 @@ div.spScreenTitle h4 {
 }
 .SobiPro .SpApps .icon-bell-alt {
   color: orange;
+}
+.SobiPro .SpApps .icon-cloud-download {
+  color: #0480BE;
+}
+.SobiPro .SpCloudInstall .progress {
+  margin: 5px 0px;
 }
 .SobiPro .SpCellCenter .sp-mini-bt {
   padding: 4px 4px !important;
