Extension Installer layout/3

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -404,6 +404,9 @@ div.spScreenTitle h4 {
 .SobiPro .SpApps .icon-cloud-download {
   color: #0480BE;
 }
+.SobiPro .SpCloudInstall {
+  width: 13%;
+}
 .SobiPro .SpCloudInstall .progress {
   margin: 5px 0px;
 }
