--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -486,6 +486,10 @@ div.spScreenTitle h4 {
   color: #0480BE;
 }
 
+.SobiPro .SpCloudInstall {
+  width: 13%;
+}
+
 .SobiPro .SpCloudInstall .progress {
   margin: 5px 0px;
 }
