Extension Installer layout/4

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -421,6 +421,11 @@ div.spScreenTitle h4 {
 .SobiPro .SpSmallCol {
   width: 5%;
 }
+.SobiPro .smallmessage {
+  padding-top: 3px;
+  padding-bottom: 3px;
+  margin-bottom: 5px;
+}
 .SobiPro .tooltip-inner {
   color: #ffffff;
   text-align: center;
