--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -508,6 +508,12 @@ div.spScreenTitle h4 {
   width: 5%;
 }
 
+.SobiPro .smallmessage {
+  padding-top: 3px;
+  padding-bottom: 3px;
+  margin-bottom: 5px;
+}
+
 .SobiPro .tooltip-inner {
   color: #ffffff;
   text-align: center;
