Extension Installer layout/5

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -182,9 +182,13 @@ div.spScreenTitle h4 {
   float: left;
   padding-left: 10px;
 }
+.SobiPro .SpRemoveRepo,
 .SpCloudInstall .SpExtInstall {
   float: left;
   padding-left: 8px;
+}
+.SobiPro .SpExtName .tooltip-inner {
+  text-align: left;
 }
 #SPAdmToolbar .divider {
   padding: 0 5px;
