--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -223,9 +223,14 @@ div.spScreenTitle h4 {
   padding-left: 10px;
 }
 
+.SobiPro .SpRemoveRepo,
 .SpCloudInstall .SpExtInstall {
   float: left;
   padding-left: 8px;
+}
+
+.SobiPro .SpExtName .tooltip-inner {
+  text-align: left;
 }
 
 #SPAdmToolbar .divider {
