Position Arrows layout

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/icons.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/icons.css
@@ -53,7 +53,10 @@
   display: inline;
   width: auto;
   height: auto;
+  /* Sigsiu.NET
   line-height: normal;
+  */
+
   vertical-align: baseline;
   background-image: none !important;
   background-position: 0% 0%;
