--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/icons.org.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/icons.org.less
@@ -48,7 +48,9 @@
   display: inline;
   width: auto;
   height: auto;
+/* Sigsiu.NET
   line-height: normal;
+  */
   vertical-align: baseline;
   background-image: none !important;
   background-position: 0% 0%;
