--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -140,11 +140,18 @@ input[type='radio']{
   vertical-align: middle;
 }
 
+.SobiPro .table th.SpCellArrowCol,
+.SobiPro .table td.SpCellArrowCol,
 .SobiPro .table th.SpCellLeft,
 .SobiPro .table td.SpCellLeft {
   text-align: left;
   vertical-align: middle;
 }
+
+.SobiPro .table th.SpCellArrowCol,
+.SobiPro .table td.SpCellArrowCol {
+  width: 90px;
+ }
 
 .SobiPro .SpCellContainer {
   clear: both;
@@ -446,9 +453,15 @@ div.spScreenTitle h4 {
   margin-top: 0px;
 }
 
+.SobiPro .SpCellArrow i,
 .SobiPro .SpCellCenter i {
   color: #333333;
   font-size: 110%;
+}
+
+.SobiPro .SpCellArrow .icon-chevron-down,
+.SobiPro .SpCellArrow .icon-chevron-up {
+  color: #6f6f6f;
 }
 
 .SobiPro .SpCellCenter .icon-pause,
@@ -511,6 +524,16 @@ div.spScreenTitle h4 {
 
 .SobiPro .SpSmallCol {
   width: 5%;
+}
+
+.SobiPro .SpSmallCol {
+  width: 5%;
+}
+
+.SobiPro .SpCellArrow {
+  float:left;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .SobiPro .smallmessage {
@@ -670,11 +693,6 @@ div.spScreenTitle h4 {
 
 #SPAdminForm .pagination ul {
   height: 28px;
-}
-
-#SPAdminForm .pagination i {
-  margin-bottom: -2px;
-  margin-top: 2px;
 }
 
 #SPAdminForm .pagination .disabled a,
