--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -878,6 +878,27 @@ input.sp-input-micro[type="text"] {
   border-radius: 3px;
 }
 
+.SigsiuTree .selected {
+  float: left;
+  margin-left: 30px;
+}
+
+.SigsiuTree .selected select {
+  min-height: 200px;
+}
+
+.SigsiuTree .buttons {
+  clear: both;
+  padding: 10px;
+}
+
+.SigsiuTree .buttons button {
+	margin: 5px;
+}
+
+.SigsiuTree .tree {
+  float: left;
+}
 
 /* Compatibility Styles */
 
