--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/legacy.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/legacy.css
@@ -300,6 +300,13 @@ div#SPMenuCtrl {
 	clear: both;
 }
 
+[class^="icon-"],
+[class*=" icon-"] {
+    background-repeat: no-repeat;
+    font-family: Arial,Helvetica,sans-serif!important;
+    display: block!important;
+}
+
 .icon-48-SobiPro {
     background-image: url(../../../../media/sobipro/adm/folder-sobipro.png);
 }
