--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -19,6 +19,7 @@
 .SobiPro {
   color: #333333;
   font-size: 15px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .SobiPro .clearall {
   clear: both;
@@ -122,6 +123,8 @@ input[type='radio'] {
 .SobiPro .table td.SpCellLeft {
   text-align: left;
   vertical-align: middle;
+  padding-top: 5px;
+  padding-bottom: 2px;
 }
 .SobiPro .table th.SpCellArrowCol,
 .SobiPro .table td.SpCellArrowCol {
@@ -381,7 +384,6 @@ div.spScreenTitle h4 {
 .SobiPro .SpCellCenter input[type="checkbox"] {
   margin-top: 0px;
 }
-.SobiPro .SpCellArrow i,
 .SobiPro .SpCellCenter i {
   color: #333333;
   font-size: 110%;
@@ -418,6 +420,15 @@ div.spScreenTitle h4 {
 }
 .SobiPro .SpApps .icon-cloud-download {
   color: #0480BE;
+}
+.SobiPro .SpCertificate .form-horizontal .control-group {
+  margin-bottom: 0px;
+}
+#SPAdminForm .SpSoap fieldset .control-label {
+  width: 140px;
+}
+#SPAdminForm .SpSoap fieldset .controls {
+  margin-left: 160px;
 }
 .SobiPro .SpCloudInstall {
   width: 13%;
