--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -530,6 +530,7 @@ div.spScreenTitle h4 {
   padding: 4px 4px !important;
 }
 
+.SobiPro .invalid,
 .SobiPro .invalid a {
   color: red;
   font-weight: normal;
