--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/icons.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/icons.css
@@ -1,3 +1,10 @@
+/** For Joomla! 3.0 default template */
+.SobiPro [class^="icon-"]::before,
+[class*=" icon-"]::before {
+  font-family: 'FontAwesome';
+  font-style: normal;
+  speak: none;
+}
 .SobiPro {
   /*!
  *  Font Awesome 3.0.1
