--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -764,10 +764,7 @@ input.sp-input-micro[type="text"] {
   margin-top: 6px;
   color: #666666;
 }
-.GeoMap {
-  margin-right: 10px !important;
-}
-.GeoMap img {
+.controls img {
   max-width: inherit;
 }
 /* Aggregation Field */
