--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -930,7 +930,7 @@ input.sp-input-micro[type="text"] {
   margin-right: 10px !important;
 }
 
-.GeoMap img {
+.controls img {
   max-width: inherit;
 }
 
