--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/css/edit.css
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/css/edit.css
@@ -1,21 +1,25 @@
 /**
- * @version: $Id: edit.css 804 2011-02-15 13:05:29Z Radek Suski $
- * @package: SobiPro Library
- * ===================================================
+ * @version: $Id$
+ * @package: SobiPro Component for Joomla!
+
  * @author
  * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
  * Email: sobi[at]sigsiu.net
  * Url: http://www.Sigsiu.NET
- * ===================================================
- * @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
- * @license see http://www.gnu.org/licenses/lgpl.html GNU/LGPL Version 3.
- * You can use, redistribute this file and/or modify it under the terms of the GNU Lesser General Public License version 3
- * ===================================================
- * $Date: 2011-02-15 14:05:29 +0100 (Tue, 15 Feb 2011) $
- * $Revision: 804 $
- * $Author: Radek Suski $
- * $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/templates/default/css/edit.css $
+
+ * @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+ * @license GNU/GPL Version 3
+ * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+ * See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+
+ * $Date$
+ * $Revision$
+ * $Author$
+ * $HeadURL$
  */
+
 div.spFormRowOdd, 
 div.spFormRowEven {
     margin-top: 5px;
@@ -170,7 +174,7 @@ button#SPSaveCats {
  * Licensed under the MIT license:
  *   http://www.opensource.org/licenses/mit-license.php
  *
- * Revision: $Id: edit.css 804 2011-02-15 13:05:29Z Radek Suski $
+ * Revision: $Id$
  *
  */
 
