--- a/Component/branches/SobiPro-1.1/Site/media/css/tabs.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/tabs.css
@@ -1,23 +1,27 @@
 /**
- * @version: $Id: tabs.css 621 2011-01-18 17:57:39Z Sigrid Suski $
- * @package: SobiPro Library
- * ===================================================
+ * @version: $Id$
+ * @package: SobiPro Component for Joomla!
+
  * @author
  * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
  * Email: sobi[at]sigsiu.net
  * Url: http://www.Sigsiu.NET
- * ===================================================
- * @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
- * @license see http://www.gnu.org/licenses/lgpl.html GNU/LGPL Version 3.
- * You can use, redistribute this file and/or modify it under the terms of the GNU Lesser General Public License version 3
- * ===================================================
- * $Date: 2011-01-18 18:57:39 +0100 (Tue, 18 Jan 2011) $
- * $Revision: 621 $
- * $Author: Sigrid Suski $
- * $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/media/css/tabs.css $
+
+ * @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+ * @license GNU/GPL Version 3
+ * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+ * See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+
+ * $Date$
+ * $Revision$
+ * $Author$
+ * $HeadURL$
  */
- 
- .dynamic-tab-pane-control.tab-pane {
+
+
+.dynamic-tab-pane-control.tab-pane {
 	position: relative;
 	width: 100%;
 }
@@ -31,7 +35,7 @@
 .dynamic-tab-pane-control .tab-row .tab {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
-	cursor: Default;
+	cursor: default;
 	display: inline;
 	margin: 1px -5px 1px 5px;
 	float: left;
