--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -332,6 +332,8 @@ div.spScreenTitle h4 {
 #SPAdminForm div.spFilterModal .control-label {
   padding-top: 0px;
   width: 100px;
+  float: left;
+  clear: left;
 }
 #SPAdminForm div.spFilterModal .controls {
   margin-left: 120px;
