--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/icons.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/icons.less
@@ -3,6 +3,12 @@
   @import "icons.org.less";
   }
 }
+a {
+  [class^="icon-"],
+  [class*=" icon-"] {
+    text-decoration: none;  /* Sigsiu.NET */
+  }
+}
 
 /** For Joomla! 3.0 default template */
 .SobiPro [class^="icon-"]::before, [class*=" icon-"]::before {
@@ -11,6 +17,7 @@
   speak: none;
   color: inherit;
 }
+.icon-eye:before { content: "\f06e"; }
 
 .SobiPro {
   #ns > .SobiPro;
