--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -23,14 +23,15 @@
 
 @background: #ffffff;
 @font: #333;
-@font-size: 15px;
-@font-family: Arial,Helvetica,sans-serif;
+@font-size: 14px;
+@font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 @admIcons: '../../../../media/sobipro/adm';
 
 .SobiPro {
   color: @font;
   font-size: @font-size;
   font-family: @font-family;
+  line-height: 18px;
 }
 
 .SobiPro .clearall {
@@ -291,13 +292,16 @@ div.spScreenTitle h4 {
 }
 
 #SPAdminForm table .control-label {
-  padding-top: 5px;
+  padding-top: 4px;
   color: #0000b3;
 }
 #SPAdminForm fieldset .control-label {
-  padding-top: 0px;
   width: 200px;
 }
+fieldset label {
+  margin: 0;
+}
+
 #SPAdminForm fieldset .controls {
   margin-left: 220px;
 }
@@ -855,6 +859,8 @@ input.sp-input-micro[type="text"] {
 .spFieldUrlLabel label {
   padding-right: 5px;
   color: #666666;
+  margin-top: 5px;
+  float: left;
 }
 
 .spFieldUrl {
@@ -865,6 +871,8 @@ input.sp-input-micro[type="text"] {
   width: 100px;
 }
 
+.spFileUpload input,
+.spFieldRadio,
 .spFieldCheckbox {
   float: left;
 }
@@ -872,27 +880,27 @@ input.sp-input-micro[type="text"] {
 .spFieldCheckbox label {
   color: #666666;
   float: left;
+  margin-top: 5px;
 }
 
 .spFieldCheckbox input {
   margin-top: 6px !important;
   margin-left: 5px !important;
   margin-right: 5px !important;
-}
-
-.spFieldRadio {
   float: left;
 }
 
 .spFieldRadio label {
   color: #666666;
   float: left;
+  margin-top: 5px;
 }
 
 .spFieldRadio input {
   margin-top: 8px !important;
   margin-left: 5px !important;
   margin-right: 5px !important;
+  float: left;
 }
 
 .SobiPro table.mceLayout {
@@ -922,6 +930,11 @@ input.sp-input-micro[type="text"] {
 }
 
 /* Compatibility Styles */
+
+/* Editor in J!3.0 */
+.toggle-editor {
+  float: none !important;
+}
 
 /* GeoMap Field */
 .SPGeoLabel {
