J!3.0 layout/2 File Header changed for templates

--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/icons.org.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/icons.org.less
@@ -93,6 +93,7 @@ a {
   [class^="icon-"],
   [class*=" icon-"] {
     display: inline-block;
+    text-decoration: none;  /* Sigsiu.NET */
   }
 }
 
