--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -38,6 +38,11 @@
   clear: both;
 }
 
+.SobiPro td, .SobiPro th {
+  font-size: @font-size;
+  font-family: @font-family;
+}
+
 /* to override Joomla styles in IE (especially checkboxes) */
 input.required {
   background-color: inherit;
@@ -288,7 +293,7 @@ div.spScreenTitle h4 {
 }
 
 .SobiPro .modal {
-  width: 500px;
+  width: 520px;
 }
 
 #SPAdminForm table .control-label {
@@ -929,6 +934,19 @@ input.sp-input-micro[type="text"] {
   float: left;
 }
 
+/* Modale Fenster */
+.modal-backdrop, .modal-backdrop.fade.in {
+  opacity: 0.2;
+}
+.modal-backdrop {
+  background-color: #000000;
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 1040;
+}
 /* Compatibility Styles */
 
 /* Editor in J!3.0 */
